...
import FacebookLogin
import FacebookCore

class LoginViewController: UIViewController {
    
    @IBOutlet weak var loginToFacebook: UIButton!
    @IBOutlet weak var loginLaterButton: UIButton!
    
    var cameFromReserveOrOrderProcess = false
    
    private let loginManager: LoginManager = LoginManager()
    
    override func viewDidLoad() {
...
}

//MARK : results of login
extension LoginViewController {
    func errorAlert(_ error: NSError? = nil) {
        let alertController = UIAlertController(title: "Error", message: "Sorry, some error occured. Try again later. " + (error?.description ?? ""), preferredStyle: .alert)
        let okAction = UIAlertAction(title: "OK", style: .default, handler: nil)
        alertController.addAction(okAction)
        self.present(alertController, animated: true, completion: nil)
    }
    
    func successLogin() {
        switch cameFromReserveOrOrderProcess {
...
