...
                                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <color key="tintColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" secondItem="lp4-LO-05i" secondAttribute="height" multiplier="1:1" id="YVz-1M-H6R"/>
                                                    </constraints>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Call a waiter" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h21-Xn-7e8">
                                                    <rect key="frame" x="4" y="64" width="92" height="17"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="kZe-Ay-5bF" userLabel="Select Table Stack View">
                                <rect key="frame" x="127.66666666666669" y="343.66666666666669" width="120" height="65"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Table #" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fnU-D8-BBv">
                                        <rect key="frame" x="0.0" y="0.0" width="120" height="30"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="120" id="Q0E-TM-jb5"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vi8-fX-aPA">
                                        <rect key="frame" x="0.0" y="35" width="120" height="30"/>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                        <state key="normal" title="Select table"/>
                                        <connections>
                                            <action selector="button:" destination="1G8-cf-BBP" eventType="touchUpInside" id="WKa-m4-usM"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
                            <constraint firstItem="OZf-kz-Vwp" firstAttribute="bottom" secondItem="f4V-dx-SqL" secondAttribute="top" id="1DW-Eb-Rzl"/>
                            <constraint firstAttribute="trailing" secondItem="OZf-kz-Vwp" secondAttribute="trailing" id="AlP-h6-T39"/>
                            <constraint firstItem="OZf-kz-Vwp" firstAttribute="leading" secondItem="KG2-3e-jaM" secondAttribute="leading" id="CTj-kX-nj7"/>
                            <constraint firstItem="OZf-kz-Vwp" firstAttribute="top" secondItem="N7m-5K-JSN" secondAttribute="bottom" constant="-20" id="Idi-fX-Cbj"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" tag="1" title="My reservations" image="calendar-7" id="JkB-kd-EBn"/>
                    <connections>
                        <outlet property="reservLegendView" destination="rwg-X5-8pS" id="scf-uw-gfe"/>
                        <outlet property="tableView" destination="OZf-kz-Vwp" id="DKo-0o-0mT"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="DlZ-K3-GxC" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                            <constraint firstItem="euj-dc-gwZ" firstAttribute="trailing" secondItem="BR0-uW-4gq" secondAttribute="trailing" id="qf4-KB-pjE"/>
                            <constraint firstItem="BR0-uW-4gq" firstAttribute="centerX" secondItem="YFF-q5-ugu" secondAttribute="centerX" id="s1r-iF-Y6C"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="keM-Pi-dIW"/>
                    <connections>
                        <outlet property="loginLaterButton" destination="BR0-uW-4gq" id="BYC-Z9-JR1"/>
                        <outlet property="loginToFacebook" destination="euj-dc-gwZ" id="2jo-Mw-tnA"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Ufa-7L-upa" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-167.19999999999999" y="312.5615763546798"/>
...
